--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div id="clock"><span id="mins">00</span>:<span id="secs">00</span></div>
+        <div id="container">
+            <div id="clock"><span id="mins">00</span>:<span id="secs">00</span></div>
 
-        <div id="controls">
-            <button id="start">Start</button>
-            <button id="stop">Stop</button>
-            <button id="reset">Reset</button>
+            <div id="controls">
+                <button id="start">Start</button>
+                <button id="stop">Stop</button>
+                <button id="reset">Reset</button>
+            </div>
         </div>
         
         <script src="app.js" async defer></script>
